[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }

async-graphql = "7"
async-graphql-axum = "7"

redis = { version = "0.26", features = ["tokio-comp"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
